--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pwnu
-DB_USERNAME=root
-DB_PASSWORD=toor
+DB_DATABASE=ZjWdWbV42l
+DB_USERNAME=ZjWdWbV42l
+DB_PASSWORD=IvRrJMMaIb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
