--- a/.env
+++ b/.env
@@ -7,11 +7,18 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=remotemysql.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=ZjWdWbV42l
-DB_USERNAME=ZjWdWbV42l
-DB_PASSWORD=IvRrJMMaIb
+DB_DATABASE=sadesha
+DB_USERNAME=root
+DB_PASSWORD=toor
+
+#DB_CONNECTION=mysql
+#DB_HOST=remotemysql.com
+#DB_PORT=3306
+#DB_DATABASE=ZjWdWbV42l
+#DB_USERNAME=ZjWdWbV42l
+#DB_PASSWORD=IvRrJMMaIb
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
