--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,24 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:taimXvx9Im9d5vtCmXqlPUSCNttkJGgh72/YMXTGIgI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=8VF8YaoUo2
+#DB_USERNAME=root
+#DB_PASSWORD=toor
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=8VF8YaoUo2
+DB_USERNAME=8VF8YaoUo2
+DB_PASSWORD=nQmq53XxQH
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
