--- a/.env
+++ b/.env
@@ -9,16 +9,16 @@ LOG_CHANNEL=stack
 #DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
 #DB_PORT=3306
-#DB_DATABASE=sadesha
+#DB_DATABASE=8VF8YaoUo2
 #DB_USERNAME=root
 #DB_PASSWORD=toor
 
 DB_CONNECTION=mysql
 DB_HOST=remotemysql.com
 DB_PORT=3306
-DB_DATABASE=ZjWdWbV42l
-DB_USERNAME=ZjWdWbV42l
-DB_PASSWORD=IvRrJMMaIb
+DB_DATABASE=8VF8YaoUo2
+DB_USERNAME=8VF8YaoUo2
+DB_PASSWORD=nQmq53XxQH
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
